--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -14,6 +14,9 @@ jobs:
       SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
       SUPABASE_DB_PASSWORD: ${{ secrets.STAGING_DB_PASSWORD }}
       SUPABASE_PROJECT_ID: ${{ secrets.STAGING_PROJECT_ID }}
+      FCM_PROJECT_ID: ${{ secrets.FCM_PROJECT_ID }}
+      FCM_PRIVATE_KEY: ${{ secrets.FCM_PRIVATE_KEY }}
+      FCM_CLIENT_EMAIL_ID: ${{ secrets.FCM_CLIENT_EMAIL_ID }}
 
     steps:
       - uses: actions/checkout@v3
